[gd_scene load_steps=15 format=3 uid="uid://bx3l4m11fvtxu"]

[ext_resource type="Script" uid="uid://c5ghfou34056" path="res://assets/fox-npc/fox_npc.gd" id="1_lhgos"]
[ext_resource type="Texture2D" uid="uid://bdhqudfjj4xhe" path="res://assets/fox-npc/MiniFox.png" id="2_uucpf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c6rtv"]
atlas = ExtResource("2_uucpf")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg6ga"]
atlas = ExtResource("2_uucpf")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhda2"]
atlas = ExtResource("2_uucpf")
region = Rect2(64, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4p6s"]
atlas = ExtResource("2_uucpf")
region = Rect2(96, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjogt"]
atlas = ExtResource("2_uucpf")
region = Rect2(0, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p24ks"]
atlas = ExtResource("2_uucpf")
region = Rect2(32, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i7hl"]
atlas = ExtResource("2_uucpf")
region = Rect2(64, 48, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lvvy"]
atlas = ExtResource("2_uucpf")
region = Rect2(96, 48, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_0rcwh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6rtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg6ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhda2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4p6s")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p24ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i7hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lvvy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jol7r"]
radius = 11.0454

[sub_resource type="Curve2D" id="Curve2D_0irhr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 52, 27)
}
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_lhgos"]

[node name="fox-npc" type="CharacterBody2D" groups=["Animal"]]
script = ExtResource("1_lhgos")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0rcwh")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_jol7r")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_0irhr")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotation = 0.478914

[node name="AnimalDetectionArea" type="Area2D" parent="." groups=["Animal"]]
scale = Vector2(2.08, 2.08)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimalDetectionArea"]
shape = SubResource("CircleShape2D_lhgos")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
